MT 27841: prevent overlap of cells on the first column

--- a/public/themes/default/default.css
+++ b/public/themes/default/default.css
@@ -590,6 +590,7 @@ div#tabsemaine1{
   position: -webkit-sticky;
   position: sticky;
   left: 0;
+  z-index: 1;
 }
 .td_sep {
   background: inherit;
